--- a/src/main/resources/templates/developers/info.html
+++ b/src/main/resources/templates/developers/info.html
@@ -1,28 +1,52 @@
-<div th:fragment="info" xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
-    <table class="table">
-        <thead class="thead-dark">
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Surname</th>
-            <th scope="col">Technology</th>
-            <th th:if="${(developer instanceof T(com.pas.pas.model.developers.FrontEnd))}" scope="col">Dummy Attribute</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>
-                <span th:text="${developer.developerName}"></span>
-            </td>
-            <td>
-                <span th:text="${developer.developerSurname}"></span>
-            </td>
-            <td>
-                <span th:text="${developer.developerTechnology.technologyName}"></span>
-            </td>
-            <td th:if="${(developer instanceof T(com.pas.pas.model.developers.FrontEnd))}">
-                <span th:text="${developer.dummyAttribute}"></span>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div th:fragment="info" xmlns:th="http://www.w3.org/1999/xhtml">
+    <div class="d-flex flex-column">
+        <h1>Developer Info</h1>
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Surname</th>
+                <th scope="col">Technology</th>
+                <th th:if="${(developer instanceof T(com.pas.pas.model.developers.FrontEnd))}" scope="col">Dummy Attribute</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <span th:text="${developer.developerName}"></span>
+                </td>
+                <td>
+                    <span th:text="${developer.developerSurname}"></span>
+                </td>
+                <td>
+                    <span th:text="${developer.developerTechnology.technologyName}"></span>
+                </td>
+                <td th:if="${(developer instanceof T(com.pas.pas.model.developers.FrontEnd))}">
+                    <span th:text="${developer.dummyAttribute}"></span>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div th:if="${developer.getEvent() != null}" >
+            <h1>User Info</h1>
+            <table class="table">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Client Name</th>
+                    <th scope="col">Client Surname</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="event : ${developer.getEvent()}">
+                    <td>
+                        <span th:text="${event.user.userName}"></span>
+                    </td>
+                    <td>
+                        <span th:text="${event.user.userSurname}"></span>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
