--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,6 +1,6 @@
 <div th:fragment="navbar" xmlns:th="http://www.w3.org/1999/xhtml">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <h1 class="navbar-brand">Catchy application name</h1>
+        <h1 class="navbar-brand" th:text="${pageName}"></h1>
         <form  th:action="@{/users/search}" th:if="${page == 'users/index'}" class="form-inline my-2 my-lg-0">
             <input th:name="name" class="form-control mr-sm-2" type="search" placeholder="Search by name" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
