--- a/src/main/resources/templates/developers/new.html
+++ b/src/main/resources/templates/developers/new.html
@@ -1,31 +1,31 @@
 <div th:fragment="new" xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
     <div class="d-flex flex-column">
-        <h1>Add Developer</h1>
+        <h1 th:text="#{addDeveloper}"></h1>
         <form class="form-group" action="#" th:object="${developer}" th:action="@{/developers/{type}(type=${developerType.type})}" method="post">
 
             <input type="hidden" th:field="${developerType.type}" th:value="${developerType.type}">
 
-            <label for="developerName" title="Name">Developer name</label>
+            <label for="developerName" title="Name" th:text="#{developerName}"></label>
             <input class="form-control"  id="developerName" type="text" th:field="${developer.developerName}"/>
             <div th:if="${#fields.hasErrors('developerName')}" th:errors="*{developerName}" class="alert alert-danger" role="alert"></div>
 
-            <label for="developerSurname" title="Surname">Developer surname</label>
+            <label for="developerSurname" title="Surname" th:text="#{developerSurname}"></label>
             <input class="form-control"  id="developerSurname" type="text" th:field="${developer.developerSurname}" />
             <div th:if="${#fields.hasErrors('developerSurname')}" th:errors="*{developerSurname}" class="alert alert-danger" role="alert"></div>
 
             <div th:if="${(developer instanceof T(com.pas.pas.model.developers.FrontEnd))}">
-                <label for="dummyAttribute" title="DummyAttribute">Dummy Attribute</label>
+                <label for="dummyAttribute" title="DummyAttribute" th:text="#{dummyAttribute}"></label>
                 <input class="form-control"  id="dummyAttribute" type="text" th:field="${developer.dummyAttribute}" />
             </div>
 
-            <label for="selectType">Select technology</label>
+            <label for="selectType" th:text="#{selectTechnology}"></label>
             <select class="form-control" id="selectType" th:field="${technology.technologyName}">
                 <option th:each="technology : ${technologies}" th:value="${technology.technologyName}" th:text="${technology.technologyName}"></option>
             </select>
 
             <div class="button-container">
-                <input class="btn btn-primary" type="submit" value="Submit" />
-                <input class="btn btn-danger" type="reset" value="Reset" />
+                <input class="btn btn-primary" type="submit" th:value="#{submit}" />
+                <input class="btn btn-danger" type="reset" th:value="#{reset}" />
             </div>
 
         </form>
