--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -2,17 +2,17 @@
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Start Date</th>
-            <th scope="col">State/End Date</th>
-            <th scope="col">User</th>
-            <th scope="col">Developer</th>
-            <th scope="col">Remove</th>
-            <th scope="col">Edit</th>
+            <th scope="col" th:text="#{startDate}"></th>
+            <th scope="col" th:text="#{endDate}"></th>
+            <th scope="col" th:text="#{user}"></th>
+            <th scope="col" th:text="#{developer}"></th>
+            <th scope="col" th:text="#{remove}"></th>
+            <th scope="col" th:text="#{edit}"></th>
         </tr>
         </thead>
         <tbody>
         <tr th:if="${events.empty}">
-            <td colspan="2">empty</td>
+            <td colspan="2" th:text="#{empty}">empty</td>
         </tr>
         <tr th:each="event : ${events}">
             <td>
@@ -29,18 +29,18 @@
             </td>
             <td>
                 <form th:if="${event.endDate == null}" th:action="@{/events/{id}/delete(id=${event.id})}" th:method="delete">
-                    <input class="btn btn-danger" type="submit" value="remove" />
+                    <input class="btn btn-danger" type="submit" th:value="#{remove}" />
                 </form>
             </td>
             <td>
                 <form th:if="${event.endDate == null}" th:action="@{/events/{id}/end(id=${event.id})}" method="post">
-                    <input class="btn btn-secondary"  type="submit" value="end" />
+                    <input class="btn btn-secondary"  type="submit" th:value="#{end}" />
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
     <form th:action="@{/events/new}">
-        <input class="btn btn-success" type="submit" value="Add new event" />
+        <input class="btn btn-success" type="submit" th:value="#{addNewEvent}" />
     </form>
 </div>
