--- a/src/main/resources/templates/events/new.html
+++ b/src/main/resources/templates/events/new.html
@@ -1,15 +1,15 @@
 <div xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
     <div class="d-flex flex-column">
-        <h1>Add Event</h1>
+        <h1 th:text="#{addNewEvent}"></h1>
         <form class="form-group"  action="#" th:action="@{/events}" th:object="${event}" method="post">
-            <label for="selectUser">Select User</label>
+            <label for="selectUser" th:text="#{selectUser}"></label>
             <select class="form-control" id="selectUser" th:field="${user.userId}">
                 <option th:each="user : ${users}"
                         th:value="${user.userId}"
                         th:text="${user.userName + ' ' + user.userSurname}">
                 </option>
             </select>
-            <label for="selectDeveloper">Select Developer</label>
+            <label for="selectDeveloper" th:text="#{selectDeveloper}"></label>
             <select class="form-control" id="selectDeveloper" th:field="${developer.developerId}">
                 <option th:each="developer : ${developers}"
                         th:value="${developer.developerId}"
@@ -17,8 +17,8 @@
                 </option>
             </select>
             <div class="button-container">
-                <input class="btn btn-primary" type="submit" value="Submit" />
-                <input class="btn btn-danger" type="reset" value="Reset" />
+                <input class="btn btn-primary" type="submit" th:value="#{submit}" />
+                <input class="btn btn-danger" type="reset" th:value="#{reset}" />
             </div>
         </form>
     </div>
