--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,8 +1,8 @@
 <div th:fragment="sidebar" class="d-flex align-items-stretch" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="sidenav">
-        <a class="nav-link" th:href="@{/developers}">Developers</a>
-        <a class="nav-link" th:href="@{/users}">Users</a>
-        <a class="nav-link" th:href="@{/events}">Events</a>
-        <a class="nav-link" th:href="@{/technologies}">Technologies</a>
+        <a class="nav-link" th:href="@{/developers}" th:text="#{developers}"></a>
+        <a class="nav-link" th:href="@{/users}" th:text="#{users}"></a>
+        <a class="nav-link" th:href="@{/events}" th:text="#{events}"></a>
+        <a class="nav-link" th:href="@{/technologies}" th:text="#{technologies}"></a>
     </div>
 </div>
