--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -1,19 +1,19 @@
 <div th:fragment="edit" xmlns:th="http://www.w3.org/1999/xhtml" class="d-flex justify-content-center">
     <div class="d-flex flex-column">
-        <h1>Edit User</h1>
+        <h1 th:text="#{editUser}"></h1>
         <form class="form-group" action="#" th:action="@{/users/{id}(id=${user.userId})}" th:object="${user}" method="post">
 
-            <label for="userName" title="Name">User name</label>
+            <label for="userName" title="Name" th:text="#{userName}"></label>
             <input class="form-control" id="userName" type="text" th:field="*{userName}"/>
             <div th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" class="alert alert-danger" role="alert"></div>
 
-            <label for="userSurname" title="Surname">User surname</label>
+            <label for="userSurname" title="Surname" th:text="#{userSurname}"></label>
             <input class="form-control" id="userSurname" type="text" th:field="*{userSurname}" />
             <div th:if="${#fields.hasErrors('userSurname')}" th:errors="*{userSurname}" class="alert alert-danger" role="alert"></div>
 
             <div class="button-container">
-                <input class="btn btn-primary" type="submit" value="Submit" />
-                <input class="btn btn-danger" type="reset" value="Reset" />
+                <input class="btn btn-primary" type="submit" th:value="#{submit}" />
+                <input class="btn btn-danger" type="reset" th:value="#{reset}" />
             </div>
         </form>
     </div>
