[Add] user password [Change] user type

--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -13,9 +13,9 @@
 
             <label for="selectType" th:text="#{userType}"></label>
             <select class="form-control" id="selectType" th:field="*{userType}">
-                <option value="Admin">Admin</option>
-                <option value="Client">Client</option>
-                <option value="ResourceAdministrator">ResourceAdministrator</option>
+                <option value="ADMIN">Admin</option>
+                <option value="CLIENT">Client</option>
+                <option value="RESOURCE_ADMINISTRATOR">ResourceAdministrator</option>
             </select>
 
             <div class="button-container">
