--- a/src/main/resources/templates/application/login.html
+++ b/src/main/resources/templates/application/login.html
@@ -20,6 +20,11 @@
             <label for="password" title="Password" th:text="#{password}"></label>
             <input class="form-control" id="password" type="password" name="password" />
 
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="remember-me" name="remember-me">
+                <label class="form-check-label" for="remember-me" th:text="#{rememberMe}"></label>
+            </div>
+
             <div class="button-container">
                 <input class="btn btn-primary" type="submit" th:value="#{logIn}" />
             </div>
