--- a/src/main/resources/templates/application/home.html
+++ b/src/main/resources/templates/application/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" lang="en" >
+<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en" >
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
@@ -12,6 +12,10 @@
     <div th:replace="fragments/navbar :: navbar"></div>
     <div class="app-container">
         <div th:replace="fragments/sidebar :: sidebar"></div>
+        <div class="d-flex justify-content-center">
+            <h1 sec:authentication="principal.username"></h1>
+            <h1 sec:authentication="principal.authorities"></h1>
+        </div>
     </div>
     <div th:replace="fragments/footer :: footer"></div>
 </body>
