[Add] custom email validation, user registration, new user email attribute

--- a/src/main/resources/templates/application/login.html
+++ b/src/main/resources/templates/application/login.html
@@ -27,6 +27,7 @@
 
             <div class="button-container">
                 <input class="btn btn-primary" type="submit" th:value="#{logIn}" />
+                <a href="/register" class="btn btn-outline-success my-2 my-sm-0" role="button" aria-pressed="true" th:text="#{register}"></a>
             </div>
         </form>
     </div>
