[Add] authentication error message

--- a/src/main/resources/static/layout.css
+++ b/src/main/resources/static/layout.css
@@ -34,6 +34,10 @@
     margin-bottom: 60px;
 }
 
+.register-container {
+    margin-bottom: 60px;
+}
+
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
