--- a/src/main/resources/templates/application/login.html
+++ b/src/main/resources/templates/application/login.html
@@ -11,6 +11,7 @@
 <body>
 <div class="d-flex justify-content-center">
     <div class="d-flex flex-column">
+        <p th:if="${param.error}" class="alert alert-info" role="alert" th:text="#{wrongUP}"></p>
         <h1 th:text="#{logIn}"></h1>
         <form class="form-group" action="#" th:action="@{/login}" method="post">
 
