--- a/src/main/resources/templates/application/login.html
+++ b/src/main/resources/templates/application/login.html
@@ -15,8 +15,8 @@
         <h1 th:text="#{logIn}"></h1>
         <form class="form-group" action="#" th:action="@{/login}" method="post">
 
-            <label for="userName" title="Name" th:text="#{userName}"></label>
-            <input class="form-control" id="userName" type="email" name="username"/>
+            <label for="userEmail" title="Name" th:text="#{userEmail}"></label>
+            <input class="form-control" id="userEmail" type="email" name="username"/>
 
             <label for="password" title="Password" th:text="#{password}"></label>
             <input class="form-control" id="password" type="password" name="password" />
