[Fix] add user permission, home view

--- a/src/main/resources/templates/application/home.html
+++ b/src/main/resources/templates/application/home.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en" >
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/layout.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
-<body>
-    <div th:replace="fragments/navbar :: navbar"></div>
-    <div class="app-container">
-        <div th:replace="fragments/sidebar :: sidebar"></div>
-        <div class="d-flex justify-content-center">
-            <h1 sec:authentication="principal.username"></h1>
-            <h1 sec:authentication="principal.authorities"></h1>
-        </div>
+<div th:fragment="home" class="app-container" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+     xmlns:th="http://www.w3.org/1999/xhtml">
+    <div class="d-flex justify-content-center">
+        <h1 sec:authentication="principal.username"></h1>
+        <h1 sec:authentication="principal.authorities"></h1>
     </div>
-    <div th:replace="fragments/footer :: footer"></div>
-</body>
-</html>
+</div>
+
