--- a/src/main/resources/templates/application/register.html
+++ b/src/main/resources/templates/application/register.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml" lang="en" >
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/font-awesome.min.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/layout.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<div th:replace="fragments/head :: head"></div>
 <body>
 <div class="d-flex justify-content-center register-container">
     <div class="d-flex flex-column">
