--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -3,7 +3,7 @@
         <a sec:authorized="isAuthenticated()" class="nav-link" th:href="@{/home}" th:text="#{home}"></a>
         <a sec:authorize="hasRole('ROLE_RESOURCE_ADMINISTRATOR')" class="nav-link" th:href="@{/developers}" th:text="#{developers}"></a>
         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/users}" th:text="#{users}"></a>
-        <a sec:authorize="hasRole('ROLE_CLIENT')" class="nav-link" th:href="@{/events}" th:text="#{events}"></a>
+        <a sec:authorize="hasAnyRole('ROLE_CLIENT', 'ROLE_ADMIN')" class="nav-link" th:href="@{/events}" th:text="#{events}"></a>
         <a sec:authorized="isAuthenticated()" class="nav-link" th:href="@{/technologies}" th:text="#{technologies}"></a>
     </div>
 </div>
