--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -1,5 +1,5 @@
 <div th:fragment="index" xmlns:th="http://www.w3.org/1999/xhtml">
-    <table class="table">
+    <table class="table" id="result">
         <thead class="thead-dark">
         <tr>
             <th scope="col" th:text="#{name}"></th>
