--- a/src/main/resources/templates/users/new.html
+++ b/src/main/resources/templates/users/new.html
@@ -26,6 +26,8 @@
                 <option value="RESOURCE_ADMINISTRATOR">ResourceAdministrator</option>
             </select>
 
+            <div class="g-recaptcha" data-sitekey="6Lf7pMoUAAAAAIrDBgLVZS6SAnvTffmT9zr_PBiU"></div>
+
             <div class="button-container">
                 <input class="btn btn-primary" type="submit" th:value="#{submit}" />
                 <input class="btn btn-danger" type="reset" th:value="#{reset}" />
